add action, photo album

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bob-nettsidekurs",
+  "name": "stian-webapp",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -12,6 +12,7 @@
     "@mui/material": "^5.14.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photo-album": "^2.3.0",
     "react-scripts": "^5.0.1"
   },
   "eslintConfig": {
