--- a/.github/workflows/image_update.yml
+++ b/.github/workflows/image_update.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: Azhtian/images
-          token: ${{ secrets.PAT_IMAGE_REPO }}
+          token: ${{ secrets.PAT_FOR_IMAGE_REPO }}
         #- name: Process image changes
         #run:
 
